# level3_nlp_finalproject-nlp-03

./: .gitignore  Dockerfile  README.md  crong.ipynb  pyproject.toml  run.sh
app/: README.md  database.py  load_model.py  logger.py  main.py  models.py  sample_data.json  scheduler.py  testdata.py  update_dialogueDB.py
app/key/: key.py  sample_data.json
app/static/css/: style.css  style2.css
app/static/js/: script.js
app/static/sample/: dialogues.pickle  products.pickle  users.pickle
app/templates/: about.html  base.html  chatting.html  example.html  feedback.html  index.html  item-upload.html  login.html  ranking.html  signup.html
chat_bot/: LICENSE
chat_bot/neural_chat/: advisor.py  conversation.py  price_parser.py
chat_bot/neural_chat/algo/: sac.py
chat_bot/neural_chat/craigslist/: e2e_dataset.py  price_parser.py
chat_bot/neural_chat/e2emodel/: __init__.py  e2e_lora_model.py  preprocess.py
chat_bot/neural_chat/eval/: __init__.py
chat_bot/neural_chat/gpt2/: gpt2.py  processing.py
chat_bot/scripts/: eval.py  train.py
chat_bot/scripts/eval/: e2e_eval.py
chat_bot/scripts/train/: chai_emaq.py
chat_bot/scripts/transformers/: finetune_gpt2.py  finetune_lora.py  finetune_peft.py  generate_embeddings.py  generate_sentences.py
chat_bot/test/craigslist/: test_price_parser.py
data/: datagenerator.ipynb  postprocess_gen_data.ipynb  sample_data.json
data-processing/: .gitignore  data-creator-ChatGPT.ipynb  file.ipynb  translate_to_kor.py
modelapi/: load_model.py  logger.py  main.py  run.sh
