[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["wontaek <dnjdsxor21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^2.0.18"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
alembic = "^1.11.1"
pymongo = "^4.4.0"
motor = "^3.2.0"
schedule = "^1.2.0"
rocketry = "^2.5.1"
pydantic = "1.10.10"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
