[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["wontaek <dnjdsxor21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.18"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
alembic = "^1.11.1"
torch = { url = "https://download.pytorch.org/whl/cu117/torch-2.0.1%2Bcu117-cp39-cp39-linux_x86_64.whl"}
transformers = "^4.30.2"
tqdm = "^4.65.0"
flatten-dict = "^0.4.2"
peft = "^0.3.0"
accelerate = "^0.20.3"
bitsandbytes = "^0.40.0.post4"
nvidia-cusparse-cu11 = "^11.7.5.86"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
